syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "/gen";

message File {
  FileInfo info = 1;
  bytes content = 2;
}

message DownloadFileRequest {
  string name = 1;
}

message FileInfo {
  string name = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
}

message SaveFileRequest {
  File file = 1;
}

message SaveFileResponse {

}

message GetFileListResponse {
  repeated string list = 1;
}
message DownloadFileResponse {
  File file = 1;
}

service FileService {
  rpc SaveFile (SaveFileRequest) returns (SaveFileResponse);
  rpc GetFileList (google.protobuf.Empty) returns (stream GetFileListResponse);
  rpc DownloadFile (DownloadFileRequest) returns (DownloadFileResponse);
}

